# C-Practice

./: .gitignore  Word转换指南.md  googletest测试结果报告.md  md_to_docx.py  simple_test.cpp  学号_姓名_实验一报告.docx  学号_姓名_实验一报告.md  学号_姓名_实验三报告.docx  学号_姓名_实验三报告.md  学号_姓名_实验二报告.docx  学号_姓名_实验二报告.md  学号_姓名_实验四报告.docx  学号_姓名_实验四报告.md  车辆执行器实验报告.docx  车辆执行器实验报告.md
1-必备知识与环境准备/: 1-CPP编程实践环境搭建说明书.docx  2-Git常用操作指南.docx
2-需求文档/: 课后综合作业-支持不同的车辆类型.md  需求1-基本控制指令.md  需求3-支持倒车功能.md  需求4-支持掉头功能.md
2-需求文档/课后综合作业-支持不同的车辆类型/: CMakeLists.txt  README.md  executor.cpp  executor.h  test_executor.cpp  vehicle.h
2-需求文档/需求1-基本控制指令/: README.md  executor.cpp  executor.h  test_executor.cpp
2-需求文档/需求2-支持加速功能/: CMakeLists.txt  README.md  executor.cpp  executor.h  test_executor.cpp
2-需求文档/需求3-支持倒车功能/: CMakeLists.txt  README.md  executor.cpp  executor.h  test_executor.cpp  test_simple.cpp
2-需求文档/需求4-支持掉头功能/: README.md  executor.cpp  executor.h  test_executor.cpp
4-理论知识课件参考/实验4-面向泛型编程/: 1-现代C++面向对象语法改进.pptx  2-总结.pptx
